# swid-autotools

./: .README.md.in  .TUTORIAL.md.in  .git_ls_tree__sample.txt  .git_ls_tree__sample_tagged.txt  .gitignore  .travis.yml  Makefile  README.md  TUTORIAL.md
include/: swid.am
lib/: swidtag.py
m4/: swid.m4
tests/: Makefile
tests/incorporation/: .gitignore  Makefile  library_files.txt  patched_files.txt
tests/sample_nop/: Makefile.am  README.md  configure.ac
tests/sample_nop_corpus_tag/: .gitignore  Makefile  README.md  check-core.py  check-swidval.mk  sample_tag_id.py  swidval-base-requirements-satisfied.py
tests/sample_nop_corpus_tag/base/: README.md  configure.ac
tests/sample_nop_corpus_tag/configure_disable_swid_xmllint/: Makefile.am  README.md
tests/sample_nop_corpus_tag/configure_disable_swid_xmllint/include/: swid.am
tests/sample_nop_corpus_tag/lang/: README.md  configure.ac
tests/sample_nop_corpus_tag/lang/lib/: Makefile.am
tests/sample_nop_corpus_tag/lang/m4/: swid.m4
tests/sample_nop_corpus_tag/tagid_file/: README.md  configure.ac
tests/sample_nop_corpus_tag/tagid_file/var/swid/: Makefile.am  corpus-bzip2-tagId.txt  corpus-lzip-tagId.txt  corpus-tagId.txt  corpus-xz-tagId.txt  corpus-zip-tagId.txt  primary-tagId.txt
tests/sample_nop_corpus_tag/tagname/: README.md  configure.ac
tests/sample_nop_corpus_tag/tagname/include/: Makefile.am
tests/sample_nop_corpus_tag/tagname/lib/: swidtag.py
tests/sample_nop_corpus_tag/tagversion_file/: .gitignore  Makefile.am  README.md  autogen.sh
tests/sample_nop_corpus_tag/tagversion_file/src/: Makefile.am  nop.c
tests/sample_nop_corpus_tag/tagversion_file/var/swid/: Makefile.am
tests/sample_nop_corpus_tag/versionscheme/: README.md  configure.ac
tests/share/: Makefile  swidval-0.5.0-swidval.zip.sha512
