# This software was developed at the National Institute of Standards
# and Technology by employees of the Federal Government in the course
# of their official duties. Pursuant to title 17 Section 105 of the
# United States Code this software is not subject to copyright
# protection and is in the public domain. NIST assumes no
# responsibility whatsoever for its use by other parties, and makes
# no guarantees, expressed or implied, about its quality,
# reliability, or any other characteristic.
#
# We would appreciate acknowledgement if the software is used.

# NOTE: These Automake dist-* options are only present to assist with
# unit testing.  Without them, only a .tar.gz file would be built when
# running 'make dist'.
AUTOMAKE_OPTIONS = \
  dist-bzip2 \
  dist-lzip \
  dist-xz \
  dist-zip

SUBDIRS = src
